src/test/ui/ufcs/ufcs-qpath-self-mismatch.stderr
error[E0277]: cannot add `u32` to `i32`
  --> $DIR/ufcs-qpath-self-mismatch.rs:4:5
   |
LL |     <i32 as Add<u32>>::add(1, 2);
   |     ^^^^^^^^^^^^^^^^^^^^^^ no implementation for `i32 + u32`
   |
   = help: the trait `std::ops::Add<u32>` is not implemented for `i32`

error[E0308]: mismatched types
  --> $DIR/ufcs-qpath-self-mismatch.rs:6:28
   |
LL |     <i32 as Add<i32>>::add(1u32, 2);
   |                            ^^^^ expected i32, found u32
help: change the type of the numeric literal from `u32` to `i32`
   |
LL |     <i32 as Add<i32>>::add(1i32, 2);
   |                            ^^^^

error[E0308]: mismatched types
  --> $DIR/ufcs-qpath-self-mismatch.rs:8:31
   |
LL |     <i32 as Add<i32>>::add(1, 2u32);
   |                               ^^^^ expected i32, found u32
help: change the type of the numeric literal from `u32` to `i32`
   |
LL |     <i32 as Add<i32>>::add(1, 2i32);
   |                               ^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
